add reusable job templates
